# ChangeLog for dev-dotnet/ipod-sharp
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/ipod-sharp/Attic/ChangeLog,v 1.3 2005/12/07 13:03:29 herbs Exp $

  07 Dec 2005; Herbie Hopkins <herbs@gentoo.org> ipod-sharp-0.5.12.ebuild:
  Marked ~amd64.

*ipod-sharp-0.5.12 (06 Dec 2005)

  06 Dec 2005; Luis Medinas <metalgod@gentoo.org> +ipod-sharp-0.5.12.ebuild:
  Version Bump.

*ipod-sharp-0.5.11.1 (27 Nov 2005)

  27 Nov 2005; Luis Medinas <metalgod@gentoo.org>
  +ipod-sharp-0.5.11.1.ebuild:
  New Package. This is a library needed to build Banshee. Thanks to all users
  involved in bug #91419.
